sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:7: error: unclosed character literal
    print ( blancrouge +'        k       ')
                        ^DutchFlagAlgo:7: error: unclosed character literal
    print ( blancrouge +'        k       ')
                                         ^DutchFlagAlgo:7: error: ')' expected but something found.
    print ( blancrouge +'        k       ')
                        ^